--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
 urlAddress = https://github.com/
-browser = firefox
-//browser = chrome
-implicitWait = 5
+//browser = firefox
+browser = chrome
+implicitWait = 10
